# xb-align

./: .gitignore  CHANGELOG.md  LICENSE  M2_EMD_FIX_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  TREE.txt  check_env_version.py  check_envfrag_version.py  pyproject.toml  run_m1_pipeline.py  setup_env.bat  setup_env.sh
.claude/: settings.local.json
data/raw/: CNPD_ETCM_merged.xlsx  drugs_raw.csv
tests/: __init__.py  test_baseline_generator.py  test_baseline_scoring.py  test_data_pipeline.py  test_macro_align.py  test_macro_eval.py  test_priors_micro.py  test_random_doping.py
xb_align/: __init__.py
xb_align/baseline/: __init__.py  generator.py  random_doping.py  scoring.py
xb_align/core/: __init__.py  env_featurizer.py
xb_align/data/: build_envfrag_table.py  build_halopos_stats.py  prepare_drugbank_raw.py  prepare_drugs.py  prepare_np_scaffolds.py
xb_align/eval/: __init__.py  macro_eval.py
xb_align/gfn/: __init__.py
xb_align/priors/: __init__.py  atom_vocab.py  envfrag_energy.py  graph_mlm.py  graph_mlm_data.py  macro_align.py  pas_energy.py  position_descriptor.py  train_graph_mlm.py
xb_align/rewards/: __init__.py  prior_micro.py
xb_align/scripts/: __init__.py  analyze_macro_distributions.py  compare_prior_on_drugs_vs_random.py  run_macro_baseline.py
