[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "xb-align"
version = "0.1.0"
description = "GFlowNet-based halogen/heteroatom doping for natural product molecules"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["drug-design", "gflownet", "cheminformatics", "natural-products", "halogen-bonding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy<2.0",
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
    "openpyxl>=3.0.0",
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "scikit-learn>=1.2.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.11.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/yourname/xb-align"
Repository = "https://github.com/yourname/xb-align"
Issues = "https://github.com/yourname/xb-align/issues"

[tool.setuptools]
packages = ["xb_align"]

[tool.setuptools.package-data]
xb_align = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
